# CocraikeLauncher

./: CMakeLists.txt  README.md  kokain.sh
launcher/: main.cpp
launcher/minecraft/launch/: LauncherPartLaunch.cpp
libraries/launcher/: CMakeLists.txt
libraries/launcher/org/cocraikelauncher/: EntryPoint.java
libraries/launcher/org/cocraikelauncher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/cocraikelauncher/launcher/: Launcher.java
libraries/launcher/org/cocraikelauncher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/org/cocraikelauncher/launcher/impl/legacy/: LegacyFrame.java  LegacyLauncher.java
libraries/launcher/org/cocraikelauncher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/org/cocraikelauncher/utils/logging/: Level.java  Log.java
program_info/: CMakeLists.txt  cocraikelauncher.6.scd  cocraikelauncher.qrc  cocraikelauncher.rc.in  genicons.sh  org.cocraikelauncher.CocraikeLauncher.desktop.in
